# WeatherAlerting-IaC

./: .pre-commit-config.yaml  LICENSE  Pulumi.WeatherAlerting.dev.yaml  Pulumi.yaml  README.md  pyproject.toml
scripts/: pulumi-state-login.sh
src/: __main__.py  autotag.py  backend.py  database.py  frontend_s3.py  frontend_s3_policy.json  networking.py  utils.py
